--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.KingsLeague"
         tools:targetApi="31">
-
         <activity
-            android:name=".MenuAdm"
+            android:name=".MenuA"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <activity
             android:name=".Menu"
             android:exported="false">
