--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
 
         <activity
             android:name=".ui.activity.MenuA"
+            android:screenOrientation="portrait"
+
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -26,6 +28,8 @@
         </activity>
         <activity
             android:name=".ui.activity.Menu"
+            android:screenOrientation="portrait"
+
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -33,7 +37,9 @@
         </activity>
         <activity
             android:name=".ui.activity.SplashScreen"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,13 +48,17 @@
         </activity>
         <activity
             android:name=".ui.activity.Register"
-            android:exported="false">
+            android:exported="false"
+            android:screenOrientation="portrait"
+            >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
             android:name=".ui.activity.RecuperarContrasenya"
+            android:screenOrientation="portrait"
+
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -56,7 +66,9 @@
         </activity>
         <activity
             android:name=".ui.activity.Login"
-            android:exported="false">
+            android:exported="false"
+            android:screenOrientation="portrait"
+            >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
